versioned_docs/version-7.4.0/api/geomEach.mdx
---
title: geomEach
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

### Description

Iterate over each geometry in any GeoJSON object, similar to Array.forEach()

Note: Nested GeometryCollections are not recursively unwrapped.

### Parameters

| Name     | Type                                                                                                                                                                                                                                                                                                                                                                                                                                    | Description                                                                                    |
| -------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------- |
| geojson  | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2) &#124; [Geometry](https://tools.ietf.org/html/rfc7946#section-3.1) &#124; [GeometryObject](https://tools.ietf.org/html/rfc7946#section-3.1) &#124; [Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[GeometryCollection](https://tools.ietf.org/html/rfc7946#section-3.1.8)&gt;** | any GeoJSON object                                                                             |
| callback | **[geomEachCallback](docs/api/types/geomEachCallback.mdx)**                                                                                                                                                                                                                                                                                                                                                                             | a method that takes (currentGeometry, featureIndex, featureProperties, featureBBox, featureId) |

### Returns

**void**

### Examples

```javascript
var features = turf.featureCollection([
  turf.point([26, 37], { foo: "bar" }),
  turf.point([36, 53], { hello: "world" }),
]);

turf.geomEach(
  features,
  function (
    currentGeometry,
    featureIndex,
    featureProperties,
    featureBBox,
    featureId,
  ) {
    //=currentGeometry
    //=featureIndex
    //=featureProperties
    //=featureBBox
    //=featureId
  },
);
```

### Installation

```javascript
$ npm install @turf/meta

import { geomEach } from "@turf/meta";
const result = geomEach(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.geomEach(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
